# VibeCodeExample

./: LICENSE  README.md  intial_prompt.md
test/: README.md  pyproject.toml
test/backend/: main.py  moods.json
test/frontend/: app.py
